sidenavbar overlap fix attempt 2

--- a/src/scss/sidenavbar.scss
+++ b/src/scss/sidenavbar.scss
@@ -22,7 +22,7 @@
   // opacity: .99;
   position: absolute;
   left: 0;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   background-color: #171717;
   // background-color: $dark-secondary;
